--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "create-react-app-lambda",
+  "name": "bingo",
   "version": "0.5.0",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.0.1",
+    "firebase": "^7.13.2"
   },
   "scripts": {
     "start": "react-scripts start",
